@@ -1,3 +1,7 @@
+2009-06-30  Vladimir Prus  <vladimir@codesourcery.com>
+
+	* varobj.c (varobj_get_type): Use type_to_string.
+
 2009-06-29  Pedro Alves  <pedro@codesourcery.com>
 
 	* infrun.c (handle_inferior_event): Context switch to the new
